hopefully fix send button on mobile

--- a/assets/styles/default.scss
+++ b/assets/styles/default.scss
@@ -976,6 +976,7 @@ img.fatality {
 		button {
 			display: inline-block;
 			position: absolute;
+			top: 0;
 			right: 0;
 			height: 46px;
 			background: white;
